Improve splitting in poll command